# libAstrallRobot

astrall_core/: CMakeLists.txt
astrall_core/tests/: test_sim_backend.cpp
astrall_ros2/: README.md
astrall_ros2/sim_node/: CMakeLists.txt  package.xml
astrall_ros2/sim_node/config/: astrall_sim.yaml
astrall_ros2/sim_node/launch/: astrall_sim.launch.py
astrall_ros2/sim_node/src/: astrall_sim_node.cpp
astrall_ros2/tf_node/: CMakeLists.txt
astrall_ros2/tf_node/rviz/: astrall_sim.rviz
astrall_ros2/tf_node/urdf/: astrall_robot_dog.urdf.xacro
